--- a/templates/keepalived.conf.j2
+++ b/templates/keepalived.conf.j2
@@ -1,25 +1,65 @@
 global_defs {
     notification_email {
-        c.hueser@hzdr.de
+        {{ notification_email }}
     }
     notification_email_from keepalived@localhost
     smtp_server 127.0.0.1
     smtp_connect_timeout 30
+    router_id {{ router_id }}
 }
+
+vrrp_script chk_haproxy_process {
+    script "/usr/bin/killall -0 haproxy"
+    interval 2
+    weight {{ weight }}
+}
+
+#vrrp_script chk_haproxy_pid {
+#    script "pidof haproxy"
+#    interval 2
+#    weight {{ weight }}
+#}
 
 vrrp_instance VI_1 {
-    smtp_alert
-}
 
-virtual_server 10.0.0.1 80 {
-    delay_loop 6
-    lb_algo rr
-    lb_kind NAT
-    protocol TCP
+    interface {{ interface }}
+    state {{ state }}
+    priority {{ priority }}
 
-    real_server 192.168.33.14 80 {
-        TCP_CHECK {
-                connect_timeout 10
-        }
+    virtual_router_id {{ virtual_router_id }}
+    unicast_src_ip {{ unicast_src_ip }}
+    unicast_peer {
+        {{ unicast_peer }}
     }
+
+    virtual_ipaddress {
+        {{ virtual_ipaddress }}
+    }
+
+    authentication {
+        auth_type PASS
+        auth_pass {{ auth_pass }}
+    }
+
+    track_script {
+        chk_haproxy_process
+#        chk_haproxy_pid
+    }
+
+    smtp_alert
+    #notify_master /etc/keepalived/master.sh
+
 }
+
+#virtual_server 10.0.0.1 80 {
+#    delay_loop 6
+#    lb_algo rr
+#    lb_kind NAT
+#    protocol TCP
+#
+#    real_server 192.168.33.14 80 {
+#        TCP_CHECK {
+#                connect_timeout 10
+#        }
+#    }
+#}
