Incorporate review suggestions
* Do not restart service if it is already started.
* Specify owner, group and mode for particular files and folders.
* Remove redundant comments for tasks wich are self-explanatory by their
namei given.
* Restructure keepalived configuration file, change variable values and
rename variables.
* Adapt README file according to the changes made.

--- a/templates/keepalived.conf.j2
+++ b/templates/keepalived.conf.j2
@@ -34,7 +34,7 @@ vrrp_instance VI_1 {
     }
 
     virtual_ipaddress {
-        {{ virtual_ipaddress }}
+        {{ virtual_ipaddress_config }}
     }
 
     authentication {
