Make weight an optional variable
Signed-off-by: Norman Ziegner <norman.ziegner@ufz.de>

--- a/templates/keepalived.conf.j2
+++ b/templates/keepalived.conf.j2
@@ -18,7 +18,9 @@ global_defs {
 vrrp_script chk_haproxy_process {
     script "/usr/bin/killall -0 haproxy"
     interval 2
+{% if weight is defined %}
     weight {{ weight }}
+{% endif %}
 }
 
 vrrp_instance VI_1 {
