Incorporate review suggestions
* Adapt documentation for default variables.
* Make enable_script_security configurable.

--- a/templates/keepalived.conf.j2
+++ b/templates/keepalived.conf.j2
@@ -5,7 +5,9 @@
 
 global_defs {
     script_user {{ haproxy_user }} {{ haproxy_group }}
+{% if set_script_security_flag %}
     enable_script_security
+{% endif %}
     notification_email {
         {{ notification_email }}
     }
