--- a/templates/keepalived.service.j2
+++ b/templates/keepalived.service.j2
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2020 Helmholtz Centre for Environmental Research (UFZ)
+# SPDX-FileCopyrightText: 2020 Helmholtz-Zentrum Dresden-Rossendorf (HZDR)
+#
+# SPDX-License-Identifier: Apache-2.0
+
 [Unit]
 Description=LVS and VRRP High Availability Monitor
 After=network-online.target syslog.target
