Make paths to keepalived binary and build directory configurable
* Instead of making just the base location of keepalived configurable,
the whole path to the binary is now configurable via systemd service unit
file.

--- a/templates/keepalived.service.j2
+++ b/templates/keepalived.service.j2
@@ -12,8 +12,8 @@ Wants=network-online.target
 Type=forking
 PIDFile={{ keepalived_pid_file_dir }}/keepalived.pid
 KillMode=process
-EnvironmentFile=-{{ keepalived_base_dir }}/keepalived/etc/sysconfig/keepalived
-ExecStart= {{ keepalived_base_dir }}/keepalived/sbin/keepalived -p {{ keepalived_pid_file_dir }}/keepalived.pid $KEEPALIVED_OPTIONS
+EnvironmentFile=-{{ keepalived_build_dir }}/etc/sysconfig/keepalived
+ExecStart={{ keepalived_path }} -p {{ keepalived_pid_file_dir }}/keepalived.pid $KEEPALIVED_OPTIONS
 ExecReload=/bin/kill -HUP $MAINPID
 
 [Install]
