Optionally allow to specify multiple virtual IPs

--- a/templates/keepalived.conf.j2
+++ b/templates/keepalived.conf.j2
@@ -46,7 +46,13 @@ vrrp_instance VI_1 {
     }
 
     virtual_ipaddress {
+    {% if keepalived_virtual_ipaddresses is defined %}
+        {% for config in keepalived_virtual_ipaddress_configs %}
+        {{ config }}
+        {% endfor %}
+    {% else %}
         {{ keepalived_virtual_ipaddress_config }}
+    {% endif %}
     }
 
     authentication {
