Fix runtime directory not being available after reboot

--- a/templates/keepalived.service.j2
+++ b/templates/keepalived.service.j2
@@ -10,6 +10,7 @@ Wants=network-online.target
 
 [Service]
 Type=forking
+RuntimeDirectory=keepalived
 PIDFile={{ keepalived_pid_file_dir }}/{{ keepalived_name }}.pid
 KillMode=process
 EnvironmentFile=-{{ keepalived_build_dir }}/etc/sysconfig/keepalived
