--- a/templates/keepalived.service.j2
+++ b/templates/keepalived.service.j2
@@ -10,11 +10,11 @@ Wants=network-online.target
 
 [Service]
 Type=forking
-RuntimeDirectory={{ keepalived_name }}
-PIDFile={{ keepalived_pid_file_dir }}/{{ keepalived_name }}.pid
+RuntimeDirectory=keepalived
+PIDFile={{ keepalived_pid_file_path }}
 KillMode=process
 EnvironmentFile=-{{ keepalived_sysconfig_file_path }}
-ExecStart={{ keepalived_executable_path }} -p {{ keepalived_pid_file_dir }}/{{ keepalived_name }}.pid $KEEPALIVED_OPTIONS
+ExecStart={{ keepalived_executable_path }} -p {{ keepalived_pid_file_path }} $KEEPALIVED_OPTIONS
 ExecReload=/bin/kill -HUP $MAINPID
 
 [Install]
