--- a/templates/keepalived.conf.j2
+++ b/templates/keepalived.conf.j2
@@ -27,6 +27,9 @@ global_defs {
 {% if keepalived_enable_process_tracking %}
 vrrp_track_process {{ keepalived_track_process }} {
     process {{ keepalived_track_process }}
+{% if keepalived_weight is defined %}
+    weight {{ keepalived_weight }}
+{% endif %}
     quorum 1
     delay 2
 }
@@ -36,7 +39,7 @@ vrrp_track_process {{ keepalived_track_process }} {
 vrrp_script {{ keepalived_script_name }} {
     script "{{ keepalived_script_command }}"
     interval 2
-{% if weight is defined %}
+{% if keepalived_weight is defined %}
     weight {{ keepalived_weight }}
 {% endif %}
 }
